Updating TreeDirectoryMonitor