@@ -18,6 +18,21 @@
 	</description>
 	<url>https://github.com/ESSICS/XAOS</url>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.1</version>
+				<configuration>
+					<argLine>
+						--add-exports javafx.graphics/com.sun.javafx.application=xaos.ui
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
 
         <!-- JavaFX - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
